@startuml scoring strategy
skinparam classAttributeIconSize 0

title Test Scoring Architecture

package "Presentation Layer" {

    class TestSessionPage <<React UI>>
}

package "Controller Layer" {

    class TestController <<Controller>> {
        +submit()
        +start()
        +results()
    }
}

package "Business Layer" {

    class TestService <<Service>> {
        -scoringFactory
        +submitTest()
        +startTest()
        +getResults()
    }

    class ScoringFactory <<Factory>> {
        +getStrategy(type)
    }

    interface IScoringStrategy {
        +calculateScore()
        +isCorrect()
    }

    class McqStrategy
    class FillBlankStrategy
    class MatchingStrategy
}

package "Data Access Layer" {

    class TestRepository <<Repository>> {
        +createAnswer()
        +updateAttempt()
        +getTestWithQuestions()
    }
}

package "Database Layer" {

    class Test
    class Question
    class TestAttempt
    class TestAnswer
}

TestSessionPage --> TestController

TestController --> TestService

TestService --> TestRepository

TestService --> ScoringFactory

ScoringFactory --> IScoringStrategy

McqStrategy ..|> IScoringStrategy
FillBlankStrategy ..|> IScoringStrategy
MatchingStrategy ..|> IScoringStrategy

TestRepository --> Test
TestRepository --> Question
TestRepository --> TestAttempt
TestRepository --> TestAnswer

@enduml